Fixed credits styling on mobile #mine

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -228,4 +228,10 @@
     #header h2 {
         text-align: center;
     }
+
+    .credits {
+        text-align: center;
+        font-size: 10px;
+        opacity: .5;
+    }
 }
